Fixing post page on mobile

--- a/stylesheets/gp-mobile.css
+++ b/stylesheets/gp-mobile.css
@@ -82,6 +82,7 @@ aside img {
   /* Page */
 
 	.holder {
+    overflow: hidden;
 		width:92%;
 		padding:0 4% 0 4%;
 	}
